Build aarch64 wheels
From v1.8.0, cibuildwheel allows to build non-native architectures using the CIBW_ARCHS_LINUX option.

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -78,6 +78,12 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
 
+      - name: Set up QEMU
+        if: runner.os == 'Linux'
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: arm64
+
       - name: Build and test wheels
         env:
           CONFTEST_PATH: ${{ github.workspace }}/conftest.py
@@ -93,6 +99,7 @@ jobs:
           CIBW_TEST_REQUIRES: pytest pandas threadpoolctl
           CIBW_TEST_COMMAND: bash {project}/build_tools/github/test_wheels.sh
           CIBW_TEST_COMMAND_WINDOWS: bash {project}/build_tools/github/test_windows_wheels.sh ${{ matrix.python }} ${{ matrix.bitness }}
+          CIBW_ARCHS_LINUX: auto aarch64
 
         run: bash build_tools/github/build_wheels.sh
 
