--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -40,8 +40,8 @@ jobs:
   build_wheels:
     name: Build wheel for cp${{ matrix.python }}-${{ matrix.platform_id }}
     runs-on: ${{ matrix.os }}
-    needs: check_build_trigger
-    if: needs.check_build_trigger.outputs.build
+    #needs: check_build_trigger
+    #if: needs.check_build_trigger.outputs.build
 
     strategy:
       # Ensure that a wheel builder finishes even if another fails
