--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -50,6 +50,7 @@ jobs:
         os: [windows-latest, ubuntu-latest, macos-latest]
         python: [36, 37, 38, 39]
         bitness: [32, 64]
+        qemu_arch: auto
         include:
           # Run 32 and 64 bit version in parallel for Linux and Windows
           - os: windows-latest
@@ -67,6 +68,10 @@ jobs:
           - os: macos-latest
             bitness: 64
             platform_id: macosx_x86_64
+          - os: ubuntu-latest
+            bitness: 64
+            platform_id: manylinux2014_aarch64
+            qemu_arch: aarch64
         exclude:
           - os: macos-latest
             bitness: 32
@@ -99,7 +104,7 @@ jobs:
           CIBW_TEST_REQUIRES: pytest pandas threadpoolctl
           CIBW_TEST_COMMAND: bash {project}/build_tools/github/test_wheels.sh
           CIBW_TEST_COMMAND_WINDOWS: bash {project}/build_tools/github/test_windows_wheels.sh ${{ matrix.python }} ${{ matrix.bitness }}
-          CIBW_ARCHS_LINUX: auto aarch64
+          CIBW_ARCHS_LINUX: ${{ matrix.qemu_arch }}
 
         run: bash build_tools/github/build_wheels.sh
 
