--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -71,7 +71,7 @@ jobs:
           - os: ubuntu-latest
             bitness: 64
             platform_id: manylinux2014_aarch64
-            qemu_arch: aarch64
+            qemu_arch: [aarch64]
         exclude:
           - os: macos-latest
             bitness: 32
