Try with python version

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -72,6 +72,8 @@ jobs:
             bitness: 64
             platform_id: manylinux2014_aarch64
             qemu_arch: [aarch64]
+            python: [36, 37, 38, 39]
+            bitness: [64]
         exclude:
           - os: macos-latest
             bitness: 32
